--- a/briar-android/src/main/res/values-fi/strings.xml
+++ b/briar-android/src/main/res/values-fi/strings.xml
@@ -40,6 +40,8 @@
   </plurals>
   <string name="expiry_update">Testiaikaa on pidennetty. Tilisi tulee nyt vanhentumaan %d päivän kuluttua.</string>
   <string name="expiry_date_reached">Tämä sovellus on vanhentunut.\nKiitos testaamisesta!</string>
+  <string name="startup_open_database">Puretaan tietokannan salaus...</string>
+  <string name="startup_migrate_database">Päivitetään tietokanta...</string>
   <!--Navigation Drawer-->
   <string name="nav_drawer_open_description">Avaa navigointilaatikko</string>
   <string name="nav_drawer_close_description">Sulje navigointilaatikko</string>
@@ -94,11 +96,10 @@
   <string name="show_onboarding">Näytä apudialogi</string>
   <string name="fix">Korjaa</string>
   <string name="help">Ohje</string>
-  <string name="sorry">Anteeksi</string>
+  <string name="sorry">Pahoittelemme</string>
   <!--Contacts and Private Conversations-->
-  <string name="no_contacts">Näyttää siltä, että olet uusi täällä, eikä sinulla vielä ole yhteyshenkilöitä.\n\nNapauta yllä olevaa + -kuvaketta ja seuraa ohjeita lisätäksesi kavereita luetteloon.\n\nMuista: Voit ainoastaan lisätä uusia yhteyshenkilöitä tapaamalla heidät kasvokkain. Tämä estää sen, että joku voisi esittää olevansa sinä tai lukea viestejäsi tulevaisuudessa.</string>
   <string name="date_no_private_messages">Ei viestejä.</string>
-  <string name="no_private_messages">Tämä on keskustelunäkymä.\n\nKeskustelu näyttää puuttuvan.\n\nNapauta syöttökenttää sivun pohjalla aloittaaksesi keskustelun.</string>
+  <string name="no_private_messages">Ei viestejä</string>
   <string name="message_hint">Kirjoita viesti</string>
   <string name="delete_contact">Poista yhteystieto</string>
   <string name="dialog_title_delete_contact">Vahvista yhteystiedon poistaminen</string>
@@ -145,7 +146,6 @@
     <item quantity="other">%d uutta yhteystietoa lisätty.</item>
   </plurals>
   <!--Private Groups-->
-  <string name="groups_list_empty">Et ole jäsen missään ryhmissä.\n\nNapauta yllä olevaa + -kuvaketta luodaksesi ryhmän itse tai pyydä yhteyshenkilöltä kutsua päästäksesi yhteen heidän ryhmistä.</string>
   <string name="groups_created_by">Luonut %s</string>
   <plurals name="messages">
     <item quantity="one">%d viesti</item>
@@ -198,12 +198,11 @@
   <string name="groups_reveal_visible_revealed_by_contact">Yhteys käyttäjään on näkyvissä ryhmän jäsenille (käyttäjän %s paljastamana)</string>
   <string name="groups_reveal_invisible">Yhteys käyttäjään ei ole näkyvissä ryhmän jäsenille</string>
   <!--Forums-->
-  <string name="no_forums">Sinulla ei vielä ole yhtäkään foorumia.\n\nMiksi et aloita uutta napauttamalla yllä olevaa + -kuvaketta?\n\nVoit myös pyytää muita käyttäjiä jakamaan foorumeita kanssasi.</string>
   <string name="create_forum_title">Luo foorumi</string>
   <string name="choose_forum_hint">Valitse nimi foorumillesi</string>
   <string name="create_forum_button">Luo foorumi</string>
   <string name="forum_created_toast">Foorumi luotu</string>
-  <string name="no_forum_posts">Tämä foorumi on tyhjä.\n\nKäytä yllä olevaa kynää kirjoittaaksesi ensimmäisen viestin.\n\nTuntuuko yksinäiseltä? Kerro tästä foorumista muille!</string>
+  <string name="no_forum_posts">Ei kirjoituksia</string>
   <string name="no_posts">Ei viestejä</string>
   <plurals name="posts">
     <item quantity="one">%d viesti</item>
@@ -215,23 +214,20 @@
   <string name="btn_reply">Vastaa</string>
   <string name="forum_leave">Lähde foorumista</string>
   <string name="dialog_title_leave_forum">Vahvista foorumista lähteminen</string>
-  <string name="dialog_message_leave_forum">Oletko varma, että haluat lähteä tästä foorumista? Käyttäjät, jotka olet kutsunut tähän foorumiin, eivät välttämättä tule enää saamaan päivityksiä tästä foorumista.</string>
   <string name="dialog_button_leave">Lähde</string>
   <string name="forum_left_toast">Lähti foorumista</string>
   <!--Forum Sharing-->
   <string name="forum_share_button">Jaa foorumi</string>
   <string name="contacts_selected">Yhteystiedot valittu</string>
   <string name="activity_share_toolbar_header">Valitse yhteystiedot</string>
-  <string name="no_contacts_selector">Näyttää siltä, että olet uusi täällä, eikä sinulla vielä ole yhteyshenkilöitä.\n\nTule takaisin sen jälkeen kun olet lisännyt ensimmäisen yhteyshenkilösi.</string>
   <string name="forum_shared_snackbar">Foorumi jaettu valittujen käyttäjien kanssa</string>
   <string name="forum_share_message">Lisää viesti (valinnainen)</string>
   <string name="forum_share_error">Tämän foorumin jakamisessa tapahtui virhe.</string>
   <string name="forum_invitation_received">%1$s on jakanut \"%2$s\" -nimisen foorumin kanssasi.</string>
   <string name="forum_invitation_sent">Olet jakanut \"%1$s\" -nimisen foorumin käyttäjälle %2$s.</string>
   <string name="forum_invitations_title">Kutsut liittyä foorumeihin</string>
-  <string name="forum_invitation_exists">Olet jo hyväksynyt kutsun liittyä tähän foorumiin. Useamman kutsun hyväksyminen kasvattaa ja vahvistaa foorumin kommunikaatiota.</string>
   <string name="forum_joined_toast">Liittyi foorumiin</string>
-  <string name="forum_declined_toast">Kutsu liittyä foorumiin on hylätty</string>
+  <string name="forum_declined_toast">Kutsu hylätty</string>
   <string name="shared_by_format">Jakanut %s</string>
   <string name="forum_invitation_already_sharing">On jo jakamassa</string>
   <string name="forum_invitation_response_accepted_sent">Olet hyväksynyt käyttäjän %s lähettämän foorumikutsun.</string>
@@ -247,18 +243,16 @@
   </plurals>
   <string name="nobody">Ei kukaan</string>
   <!--Blogs-->
-  <string name="blogs_other_blog_empty_state">Blogi on tällä hetkellä tyhjä.\n\nJoko blogin julkaisija ei ole kirjoittanut mitään vielä, tai tämän blogin sinulle jakaneen henkilön on liityttävä takaisin verkkoon, jotta blogikirjoitukset voitaisiin synkronisoida.</string>
+  <string name="blogs_other_blog_empty_state">Ei kirjoituksia</string>
   <string name="read_more">lue lisää</string>
   <string name="blogs_write_blog_post">Julkaise blogikirjoitus</string>
-  <string name="blogs_write_blog_post_body_hint">Kirjoita blogikirjoitus tähän</string>
+  <string name="blogs_write_blog_post_body_hint">Kirjoita blogikirjoitus</string>
   <string name="blogs_publish_blog_post">Julkaise</string>
   <string name="blogs_blog_post_created">Blogikirjoitus julkaistu</string>
   <string name="blogs_blog_post_received">Uusi blogikirjoitus vastaanotettu</string>
   <string name="blogs_blog_post_scroll_to">Vieritä kohtaan</string>
-  <string name="blogs_feed_empty_state">Tämä on universaali blogi syöte.\n\nNäyttää vielä siltä, ettei kukaan ole vielä julkaissut mitään.\n\nOle ensimmäinen ja napauta kynää kirjoittaaksesi uuden blogikirjoituksen.</string>
   <string name="blogs_remove_blog">Poista blogi</string>
-  <string name="blogs_remove_blog_dialog_message">Oletko varma, että haluat poistaa tämän blogin ja kaikki siihen kuuluvat kirjoitukset?\nOta huomioon, että tämä ei tule poistamaan kirjoituksia muiden käyttäjien laitteilta.</string>
-  <string name="blogs_remove_blog_ok">Poista blogi</string>
+  <string name="blogs_remove_blog_ok">Poista</string>
   <string name="blogs_blog_removed">Blogi poistettu</string>
   <string name="blogs_reblog_comment_hint">Lisää kommentti (valinnainen)</string>
   <string name="blogs_reblog_button">Jaa blogikirjoitus</string>
@@ -275,7 +269,7 @@
   <string name="blogs_sharing_invitation_sent">Olet jakanut \"%1$s\" -nimisen blogin käyttäjälle %2$s.</string>
   <string name="blogs_sharing_invitations_title">Blogi kutsut</string>
   <string name="blogs_sharing_joined_toast">Blogi tilattu</string>
-  <string name="blogs_sharing_declined_toast">Kutsu blogiin on hylätty</string>
+  <string name="blogs_sharing_declined_toast">Kutsu hylätty</string>
   <string name="sharing_status_blog">Kuka tahansa joka tilaa blogin voi jakaa sen tuntemilleen käyttäjille. Olet jakamassa tämän blogin seuraaville käyttäjille. Voi myös olla muita blogin tilaajia, joita sinä et näe.</string>
   <!--RSS Feeds-->
   <string name="blogs_rss_feeds_import">Tuo RSS syöte</string>
@@ -287,10 +281,8 @@
   <string name="blogs_rss_feeds_manage_author">Tekijä:</string>
   <string name="blogs_rss_feeds_manage_updated">Viimeksi päivitetty:</string>
   <string name="blogs_rss_remove_feed">Poista syöte</string>
-  <string name="blogs_rss_remove_feed_dialog_message">Oletko varma, että haluat poistaa tämän syötteen kaikki sen julkaisut?\nJakamasi julkaisut eivät tule poistumaan muiden henkilöiden laitteilta.</string>
-  <string name="blogs_rss_remove_feed_ok">Poista syöte</string>
+  <string name="blogs_rss_remove_feed_ok">Poista</string>
   <string name="blogs_rss_feeds_manage_delete_error">Syötteen poistaminen epäonnistui!</string>
-  <string name="blogs_rss_feeds_manage_empty_state">Et ole tilannut yhtäkään RSS syötettä.\n\nMiksi et napauta yllä olevaa plussaa ja lisää ensimmäistä?</string>
   <string name="blogs_rss_feeds_manage_error">Syötteiden lataamisessa tapahtui virhe. Yritä myöhemmin uudelleen.</string>
   <!--Settings Network-->
   <string name="network_settings_title">Verkot</string>
@@ -376,4 +368,6 @@
   <string name="permission_camera_request_body">Skannatakseen QR koodin, Briar tarvitsee luvan käyttää kameraa.</string>
   <string name="permission_camera_denied_body">Olet kieltänyt käyttämästä kameraa, mutta yhteyshenkilöiden lisääminen vaatii kameran käyttöä.\n\nOle hyvä ja harkitse kameraluvan myöntämistä.</string>
   <string name="permission_camera_denied_toast">Kameralupaa ei myönnetty</string>
+  <string name="qr_code">QR-koodi</string>
+  <string name="show_qr_code_fullscreen">Näytä QR-koodi koko näytöllä</string>
 </resources>
