--- a/briar-android/src/main/res/values-it/strings.xml
+++ b/briar-android/src/main/res/values-it/strings.xml
@@ -33,8 +33,6 @@
   <string name="startup_failed_notification_title">Briar non è riuscito a partire</string>
   <string name="startup_failed_notification_text">Tocca per maggiori informazioni.</string>
   <string name="startup_failed_activity_title">Fallimento Avvio Briar</string>
-  <string name="startup_failed_db_error">Per qualche motivo, il tuo database di Briar è danneggiato in modo irreparabile. Il tuo account, i tuoi dati e tutti i tuoi contatti sono perduti. Sfortunatamente devi reinstallare Briar e registrare un nuovo account scegliendo \'Ho dimenticato la password\'.</string>
-  <string name="startup_failed_data_too_old_error">Il tuo account è stato creato con una vecchia versione dell\'app e non può essere aperto in questa versione. Devi reinstallare la vecchia versione oppure eliminare l\'account vecchio scegliendo \'Ho dimenticato la password\'.</string>
   <string name="startup_failed_data_too_new_error">Questa versione dell\'app è troppo vecchia. Aggiornala alla versione più recente e riprova.</string>
   <string name="startup_failed_service_error">Briar non è stato in grado di caricare un plugin richiesto. Reinstallare Briar di solito sistema questo problema. Però ricorda che perderai il tuo account e tutti i dati ad esso associati poichè Briar non usa server centralizzati per mantenere i tuoi dati.</string>
   <plurals name="expiry_warning">
@@ -43,6 +41,8 @@
   </plurals>
   <string name="expiry_update">La scadenza della versione di prova è stata prorogata. Il tuo account ora scadrà fra %d giorni.</string>
   <string name="expiry_date_reached">Questo software è scaduto.\nGrazie per il test!</string>
+  <string name="startup_open_database">Decrittazione database...</string>
+  <string name="startup_migrate_database">Aggiornamento database...</string>
   <!--Navigation Drawer-->
   <string name="nav_drawer_open_description">Apri la barra di navigazione</string>
   <string name="nav_drawer_close_description">Chiudi la barra di navigazione</string>
@@ -99,9 +99,7 @@
   <string name="help">Aiuto</string>
   <string name="sorry">Scusa</string>
   <!--Contacts and Private Conversations-->
-  <string name="no_contacts">Sembra che tu sia nuovo qui e non hai ancora contatti.\n\nPremi l\'icona in alto e segui le istruzioni per aggiungere qualche amico alla tua lista.\n\nPer favore ricorda: puoi solo aggiungere nuovi contatti faccia-a-faccia per evitare che altri ti impersonino o leggano i tuoi messaggi in futuro.</string>
   <string name="date_no_private_messages">Nessun messaggio.</string>
-  <string name="no_private_messages">Questa è la vista conversazione\n\n\Sembra che ci sia una mancanza di conversazione.\n\nPremi il campo di immissione in basso per iniziare una conversazione.</string>
   <string name="message_hint">Scrivi un messaggio</string>
   <string name="delete_contact">Elimina contatto</string>
   <string name="dialog_title_delete_contact">Conferma cancellazione contatto</string>
@@ -149,7 +147,6 @@
     <item quantity="other">Aggiunti %d nuovi contatti.</item>
   </plurals>
   <!--Private Groups-->
-  <string name="groups_list_empty">Non stai partecipando ad alcun gruppo.\n\nClicca l\'icona + in alto per creare un tuo gruppo o chiedi ai tuoi contatti di essere invitato in uno dei loro gruppi.</string>
   <string name="groups_created_by">Creato da %s</string>
   <plurals name="messages">
     <item quantity="one">%d messaggio</item>
@@ -202,12 +199,11 @@
   <string name="groups_reveal_visible_revealed_by_contact">La relazione fra i contatti è visibile al gruppo (rivelata da %s)</string>
   <string name="groups_reveal_invisible">La relazione fra i contatti non è visibile al gruppo</string>
   <!--Forums-->
-  <string name="no_forums">Non hai ancora alcun forum.\n\nPerchè non ne crei uno nuovo tu premendo l\'icona + in alto?\n\nPuoi anche chiedere ai tuoi contatti di condividere forum con te.</string>
   <string name="create_forum_title">Crea Forum</string>
   <string name="choose_forum_hint">Scegli un nome per il tuo forum</string>
   <string name="create_forum_button">Crea Forum</string>
   <string name="forum_created_toast">Forum creato</string>
-  <string name="no_forum_posts">Questo forum è vuoto.\n\nUsa l\'icona penna in alto per comporre il primo post.\n\nTi senti solo qui? Condividi questo forum con i tuoi contatti!</string>
+  <string name="no_forum_posts">Nessun post da mostrare</string>
   <string name="no_posts">Nessun post.</string>
   <plurals name="posts">
     <item quantity="one">%d post</item>
@@ -219,23 +215,17 @@
   <string name="btn_reply">Rispondi</string>
   <string name="forum_leave">Lascia Forum</string>
   <string name="dialog_title_leave_forum">Conferma l\'abbandono del forum</string>
-  <string name="dialog_message_leave_forum">Sei sicuro di voler lasciare questo forum? I contatti che hai condiviso in questo forum potrebbero essere tagliati fuori dalla ricezione di aggiornamenti di questo forum.</string>
   <string name="dialog_button_leave">Lascia</string>
-  <string name="forum_left_toast">Forum lasciato</string>
   <!--Forum Sharing-->
   <string name="forum_share_button">Condividi Forum</string>
   <string name="contacts_selected">Contatti selezionati</string>
   <string name="activity_share_toolbar_header">Scegli Contatti</string>
-  <string name="no_contacts_selector">Sembra che tu sia nuovo qui e non hai alcun contatto ancora.\n\nPer favore torna dopo aver aggiunto il tuo primo contatto.</string>
   <string name="forum_shared_snackbar">Forum condiviso con i contatti scelti</string>
   <string name="forum_share_message">Aggiungi un messaggio (facoltativo)</string>
   <string name="forum_share_error">C\'è stato un errore nella condivisione di questo forum.</string>
   <string name="forum_invitation_received">%1$s ha condiviso il forum \"%2$s\" con te.</string>
   <string name="forum_invitation_sent">Hai condiviso il forum \"%1$s\" con %2$s.</string>
   <string name="forum_invitations_title">Inviti Forum</string>
-  <string name="forum_invitation_exists">Hai già accettato l\' invito a questo forum. Accettare più inviti cresce e rinforza la comunicazione nel forum.</string>
-  <string name="forum_joined_toast">Unito al forum</string>
-  <string name="forum_declined_toast">Invito al forum declinato</string>
   <string name="shared_by_format">Condiviso da %s</string>
   <string name="forum_invitation_already_sharing">Già in condivisione</string>
   <string name="forum_invitation_response_accepted_sent">Hai accettato l\'invito al forum da %s</string>
@@ -251,19 +241,15 @@
   </plurals>
   <string name="nobody">Nessuno</string>
   <!--Blogs-->
-  <string name="blogs_other_blog_empty_state">Questo blog è attualmente vuoto.\n\nO l\'autore non ha ancora scritto nulla, oppure la persona che ha condiviso questo blog con te deve tornare in line, in modo che i post possano sincronizzarsi.</string>
+  <string name="blogs_other_blog_empty_state">Nessun post da mostrare</string>
   <string name="read_more">leggi ancora</string>
   <string name="blogs_write_blog_post">Scrivere un post sul blog</string>
-  <string name="blogs_write_blog_post_body_hint">Scrivi qui il tuo post del blog</string>
   <string name="blogs_publish_blog_post">Pubblica</string>
   <string name="blogs_blog_post_created">Post blog creato</string>
   <string name="blogs_blog_post_received">Ricevuto nuovo post del blog</string>
   <string name="blogs_blog_post_scroll_to">Scorri a</string>
-  <string name="blogs_feed_empty_state">Questo è il feed globale del blog.\n\nSembra che nessuno abbia ancora scritto nulla.\n\nSii il primo e tocca l\'icona della penna per scrivere un nuovo post sul blog.</string>
   <string name="blogs_remove_blog">Rimuovi Blog</string>
-  <string name="blogs_remove_blog_dialog_message">Sei sicuro di voler rimuovere questo blog e tutti i post?\nTieni presente che questo non rimuoverà il blog dai dispositivi degli altri.</string>
-  <string name="blogs_remove_blog_ok">Rimuovi Blog</string>
-  <string name="blogs_blog_removed">Blog Rimosso</string>
+  <string name="blogs_remove_blog_ok">Rimuovi</string>
   <string name="blogs_reblog_comment_hint">Aggiungi un commento (facoltativo)</string>
   <string name="blogs_reblog_button">Reblog</string>
   <!--Blog Sharing-->
@@ -278,8 +264,6 @@
   <string name="blogs_sharing_invitation_received">%1$s ha condiviso il blog \"%2$s\" con te.</string>
   <string name="blogs_sharing_invitation_sent">Hai condiviso il blog \"%1$s\" con %2$s.</string>
   <string name="blogs_sharing_invitations_title">Inviti Blog</string>
-  <string name="blogs_sharing_joined_toast">Iscritto al Blog</string>
-  <string name="blogs_sharing_declined_toast">Invito al blog declinato</string>
   <string name="sharing_status_blog">Chiunque si iscrive ad un blog può condividerlo con i suoi contatti. Stai condividendo questo blog con i seguenti contatti. Ci potrebbero inoltre essere altri membri che non puoi vedere.</string>
   <!--RSS Feeds-->
   <string name="blogs_rss_feeds_import">Importa RSS Feed</string>
@@ -291,10 +275,8 @@
   <string name="blogs_rss_feeds_manage_author">Autore:</string>
   <string name="blogs_rss_feeds_manage_updated">Ultimo Aggiornamento:</string>
   <string name="blogs_rss_remove_feed">Rimuovi feed</string>
-  <string name="blogs_rss_remove_feed_dialog_message">Sei sicuro di voler rimuovere questo feed e tutti i suoi post?\nOgni post che hai condiviso non sarà rimosso dai dispositivi degli altri.</string>
-  <string name="blogs_rss_remove_feed_ok">Rimuovi feed</string>
+  <string name="blogs_rss_remove_feed_ok">Rimuovi</string>
   <string name="blogs_rss_feeds_manage_delete_error">Non è stato possibile cancellare il feed!</string>
-  <string name="blogs_rss_feeds_manage_empty_state">Non hai importato alcun feed RSS.\n\nPerchè non premi il più in alto per aggingere il primo?</string>
   <string name="blogs_rss_feeds_manage_error">C\'è stato un problema nel caricare i tuoi feeds. Per favore riprova fra poco.</string>
   <!--Settings Network-->
   <string name="network_settings_title">Reti</string>
