--- a/briar-android/src/main/res/values-ru/strings.xml
+++ b/briar-android/src/main/res/values-ru/strings.xml
@@ -33,8 +33,6 @@
   <string name="startup_failed_notification_title">Не удалось запустить Briar</string>
   <string name="startup_failed_notification_text">Коснитесь для получения дополнительных сведений.</string>
   <string name="startup_failed_activity_title">Сбой при запуске Briar</string>
-  <string name="startup_failed_db_error">По какой-то причине, база данных Briar повреждена без возможности восстановления. Вместе с учетной записью будут потеряны ваши данные и ваши контакты. К сожалению, вам нужно переустановить Briar и создать новый аккаунт, выбрав \'я забыл свой пароль\'.</string>
-  <string name="startup_failed_data_too_old_error">Ваша учетная запись была создана в старой версии Briar и не может быть открыта в этой версии. Вы должны либо установить старую версию, либо удалить старую учетную запись, выбрав \'я забыл свой пароль\'.</string>
   <string name="startup_failed_data_too_new_error">Версия приложения слишком старая. Обновите до последней версии и повторите попытку.</string>
   <string name="startup_failed_service_error">Briar не смог запустить требуемый подключаемый модуль. Переустановка Briar обычно решает эту проблему. Однако обратите внимание, что после этого вы потеряете свою учетную запись и все связанные с ней данные, поскольку Briar не использует центральных серверов для хранения данных.</string>
   <plurals name="expiry_warning">
@@ -45,6 +43,8 @@
   </plurals>
   <string name="expiry_update">Дата окончания тестирования была продлена. Срок действия вашей учетной записи истечет через %d дней.</string>
   <string name="expiry_date_reached">Срок действия этого программного обеспечения истек.\nСпасибо за тестирование!</string>
+  <string name="startup_open_database">Расшифровка базы данных...</string>
+  <string name="startup_migrate_database">Обновление базы данных...</string>
   <!--Navigation Drawer-->
   <string name="nav_drawer_open_description">Открыть навигационное меню</string>
   <string name="nav_drawer_close_description">Закрыть навигационное меню</string>
@@ -109,9 +109,7 @@
   <string name="help">Помощь</string>
   <string name="sorry">Сожалеем</string>
   <!--Contacts and Private Conversations-->
-  <string name="no_contacts">Кажется, вы здесь новенький и у вас нет контактов.\n\nКоснитесь значка + вверху и следуйте инструкциям, чтобы добавить друзей в список.\n\nПомните: вы можете добавлять новые контакты только лично, чтобы никто не выдал себя за вас и не мог читать ваши сообщения.</string>
   <string name="date_no_private_messages">Нет сообщений.</string>
-  <string name="no_private_messages">Это представление беседы.\n\nКажется, у нас нет беседы.\n\nПросто коснитесь поля ввода внизу, чтобы начать беседу.</string>
   <string name="message_hint">Печатает сообщение</string>
   <string name="delete_contact">Удалить контакт</string>
   <string name="dialog_title_delete_contact">Подтвердите удаление контакта</string>
@@ -161,7 +159,6 @@
     <item quantity="other">%d новых контактов добавлено.</item>
   </plurals>
   <!--Private Groups-->
-  <string name="groups_list_empty">Вы не состоите в каких-либо группах.\n\nКоснитесь значка + вверху, чтобы создать группу самостоятельно или попросить ваши контакты пригласить вас в одну из своих групп.</string>
   <string name="groups_created_by">Создано %s</string>
   <plurals name="messages">
     <item quantity="one">%d сообщение</item>
@@ -218,12 +215,11 @@
   <string name="groups_reveal_visible_revealed_by_contact">Связь между контактами видна группе (раскрывается %s)</string>
   <string name="groups_reveal_invisible">Связь между контактами не видна группе</string>
   <!--Forums-->
-  <string name="no_forums">У вас еще нет форумов.\n\nПочему бы вам не создать новый, коснувшись значка + вверху?\n\nМожно также попросить контакты поделиться с вами форумами.</string>
   <string name="create_forum_title">Создать форум</string>
   <string name="choose_forum_hint">Выберите имя для вашего форума</string>
   <string name="create_forum_button">Создать форум</string>
   <string name="forum_created_toast">Форум создан</string>
-  <string name="no_forum_posts">Этот форум пуст.\n\nСоздайте свою первую запись.\n\nЧувствуете одиночество? Поделитесь этим форумом с вашими контактами!</string>
+  <string name="no_forum_posts">Нет постов для показа</string>
   <string name="no_posts">Нет постов</string>
   <plurals name="posts">
     <item quantity="one">%d пост</item>
@@ -237,23 +233,17 @@
   <string name="btn_reply">Ответ</string>
   <string name="forum_leave">Покинуть форум</string>
   <string name="dialog_title_leave_forum">Подтвердить</string>
-  <string name="dialog_message_leave_forum">Вы уверены, что хотите покинуть этот форум? Контакты, с которыми вы поделились этим форумом, могут перестать получать обновления этого форума.</string>
   <string name="dialog_button_leave">Покинуть</string>
-  <string name="forum_left_toast">Покинул форум</string>
   <!--Forum Sharing-->
   <string name="forum_share_button">Поделиться форумом</string>
   <string name="contacts_selected">Выбранные контакты</string>
   <string name="activity_share_toolbar_header">Выбор контактов</string>
-  <string name="no_contacts_selector">Кажется, вы здесь новенький и у вас нет контактов.\n\nЗагляните сюда после добавления  своего первого контакта.</string>
   <string name="forum_shared_snackbar">Поделиться форумом совместно с выбранными контактами</string>
   <string name="forum_share_message">Добавить сообщение (необязательно)</string>
   <string name="forum_share_error">Произошла ошибка при при попытке поделиться этим форумом.</string>
   <string name="forum_invitation_received">%1$s поделился форумом \"%2$s\" с вами.</string>
   <string name="forum_invitation_sent">Вы поделились форумом \"%1$s\" с %2$s.</string>
   <string name="forum_invitations_title">Приглашения на форум</string>
-  <string name="forum_invitation_exists">Вы уже приняли приглашение на этот форум. Принятие большего числа приглашений приведет к росту и укреплению общения на форуме.</string>
-  <string name="forum_joined_toast">Присоединился к форуму</string>
-  <string name="forum_declined_toast">Приглашение на форум отклонено</string>
   <string name="shared_by_format">Поделился %s</string>
   <string name="forum_invitation_already_sharing">Уже поделился</string>
   <string name="forum_invitation_response_accepted_sent">Вы приняли приглашение на форум от %s.</string>
@@ -271,19 +261,15 @@
   </plurals>
   <string name="nobody">Никого</string>
   <!--Blogs-->
-  <string name="blogs_other_blog_empty_state">Этот блог пуст.\n\nЛибо автор еще ничего не написал, либо человек, который поделился с вами этим блогом, должен выйти в Интернет, чтобы сообщения могли быть синхронизированы.</string>
+  <string name="blogs_other_blog_empty_state">Нет постов для показа</string>
   <string name="read_more">подробнее</string>
   <string name="blogs_write_blog_post">Написать в блоге</string>
-  <string name="blogs_write_blog_post_body_hint">Введите ваше сообщение здесь</string>
   <string name="blogs_publish_blog_post">Опубликовать</string>
   <string name="blogs_blog_post_created">Запись блога создана</string>
   <string name="blogs_blog_post_received">Появилась новая запись блога</string>
   <string name="blogs_blog_post_scroll_to">Перейти</string>
-  <string name="blogs_feed_empty_state">Это глобальный блог.\n\nПохоже, что никто ничего не писал.\n\nБудьте первым - коснитесь значка пера для создания новой записи.</string>
   <string name="blogs_remove_blog">Удалить блог</string>
-  <string name="blogs_remove_blog_dialog_message">Вы действительно хотите удалить этот блог со всеми записями?\nОбратите внимание, что это не приведет к удалению блога на устройствах других пользователей.</string>
-  <string name="blogs_remove_blog_ok">Удалить блог</string>
-  <string name="blogs_blog_removed">Блог удален</string>
+  <string name="blogs_remove_blog_ok">Убрать</string>
   <string name="blogs_reblog_comment_hint">Добавить комментарий (необязательно)</string>
   <string name="blogs_reblog_button">Перепостить</string>
   <!--Blog Sharing-->
@@ -298,8 +284,6 @@
   <string name="blogs_sharing_invitation_received">%1$s поделился блогом \"%2$s\" с вами.</string>
   <string name="blogs_sharing_invitation_sent">Вы поделились блогом \"%1$s\" с %2$s.</string>
   <string name="blogs_sharing_invitations_title">Приглашения в блог</string>
-  <string name="blogs_sharing_joined_toast">Подписался на блог</string>
-  <string name="blogs_sharing_declined_toast">Приглашение в блог отклонено</string>
   <string name="sharing_status_blog">Любой, кто подписывается на блог, может поделиться им со своими контактами. Вы делитесь этим блогом со следующими контактами. Могут быть и другие подписчики, которых вы не видите.</string>
   <!--RSS Feeds-->
   <string name="blogs_rss_feeds_import">Импорт RSS-канала</string>
@@ -311,10 +295,8 @@
   <string name="blogs_rss_feeds_manage_author">Автор:</string>
   <string name="blogs_rss_feeds_manage_updated">Последнее обновление:</string>
   <string name="blogs_rss_remove_feed">Удалить RSS-канал</string>
-  <string name="blogs_rss_remove_feed_dialog_message">Вы действительно хотите удалить этот RSS-канал и все его сообщения?\nЛюбые сообщения, которыми вы поделились, не будут удалены с устройств других пользователей.</string>
-  <string name="blogs_rss_remove_feed_ok">Удалить RSS-канал</string>
+  <string name="blogs_rss_remove_feed_ok">Убрать</string>
   <string name="blogs_rss_feeds_manage_delete_error">Не удалось удалить RSS-канал!</string>
-  <string name="blogs_rss_feeds_manage_empty_state">Вы еще не импортировали RSS-каналы.\n\nПочему бы вам не нажать кнопку + в правом верхнем углу экрана, чтобы добавить первый?</string>
   <string name="blogs_rss_feeds_manage_error">Ошибка при загрузке каналов. Повторите попытку позже.</string>
   <!--Settings Network-->
   <string name="network_settings_title">Сети</string>
